fix some layout issues

--- a/stylesheets/_blog.sass
+++ b/stylesheets/_blog.sass
@@ -1,4 +1,3 @@
-
 @function blog-thing($col, $colTotal, $total)
   $result: ($col / $colTotal)
   @return $total * $result
@@ -24,19 +23,19 @@
   background: white
 
   /* class for iframe videos */
-  .videoWrapper 
+  .videoWrapper
     position: relative
     padding-bottom: 56.25% /* 16:9 */
     padding-top: 25px
     height: 0
-  
-  .videoWrapper iframe 
+
+  .videoWrapper iframe
     position: absolute
     top: 0
     left: 0
     width: 100%
     height: 100%
-  
+
 
 .blog-sidebar
   position: absolute
@@ -45,8 +44,8 @@
   flex: 1 0 60%
   -webkit-transition: transform 200ms ease
   transition: transform 200ms ease
-  -webkit-transform: translateX(-100%)
-  transform: translateX(-100%)
+  -webkit-transform: translateX(-150%)
+  transform: translateX(-150%)
   display: -webkit-flex
   -webkit-justify-content: flex-end
   -webkit-align-items: stretch
@@ -54,7 +53,7 @@
   justify-content: flex-end
   align-items: stretch
 
-  background: 
+  background:
     image: url(/images/rebrand/eurucamprailsgirls.png)
     size: cover
     position: top
@@ -95,6 +94,8 @@
   padding: $gridGutter/ 2
   @media (min-width: $centeredMaxWidth + 100)
     width: blog-thing(1, 3, $centeredMaxWidth - $gridGutter)
+    .bullet-list
+      padding-bottom: 7em
 .blog-list-inner
   padding: $gridGutter/ 2
   @media (min-width: $centeredMaxWidth + 100)
@@ -181,7 +182,7 @@
     display: block
     text-align: right
     font-style: italic
-  
+
   .small-img
     width: 50%
     margin-left: auto
@@ -213,4 +214,3 @@
 
 .medium-width
   width: 200px !important
-
