--- a/stylesheets/_top.sass
+++ b/stylesheets/_top.sass
@@ -22,7 +22,7 @@ $topbar-height: 52px
 
 .logo
   margin: 0
-  line-height: 1.45
+  line-height: 1.25
   a
     @extend %toplinks
     font-size: 22px
